refactor: change request body to update a class
